# stella-garbage-collector

./: CMakeLists.txt  README.md
stella/: gc.c  runtime.h
